# watermark

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
doc/: README.md
inc/: common.h  exception.h  image.h  layout.h  point.h  position.h  size.h  watermark.h
proto/: CMakeLists.txt
proto/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  cv_wrapper.h  cv_wrapper_impl.cpp  cv_wrapper_impl.h  exception.cpp  image.cpp  image_impl.cpp  image_impl.h  position.cpp  size.cpp  utils.cpp  utils.h  watermark.cpp  watermark_impl.cpp  watermark_impl.h
tests/: CMakeLists.txt  image_tests.cpp  size_tests.cpp  utils_tests.cpp
tests/mocks/: cv_mock.h
tests/mocks/opencv2/: core.cpp  core.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  mock_impl.cpp
tests/mocks/opencv2/core/: mat.hpp  types.hpp
tests/mocks/opencv2/core/hal/: interface.h
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  main.cpp
tools/common/: logger.h
tools/demo/: CMakeLists.txt  main.cpp
tools/proto/: CMakeLists.txt  README.md  main.cpp
tools/scaler/: CMakeLists.txt  main.cpp
